<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#0101DF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailid"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:id="@+id/button"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signup"
        android:textColor="#1C1C1C"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Language_layout"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/de_language"
            android:id="@+id/TVDeutsch"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/en_language"
            android:id="@+id/TVEnglish"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/pl_language"
            android:id="@+id/TVPolish"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>